added simple rating tests

--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "version": "1.0.1",
   "dependencies": {
     "socket.io-client": "git@github.com:liorsion/socket.io-client.git#0cd60822b6aed9fc4538009b52b0b9d0ab1c2184"
+  },
+  "devDependencies": {
+    "faker.js": "git@github.com:Marak/faker.js.git#v3.0.1"
   }
 }
