--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "bringg-sdk",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "main": [
+    "BringgSDK.js"
+  ],
   "dependencies": {
     "socket.io-client": "git@github.com:liorsion/socket.io-client.git#0cd60822b6aed9fc4538009b52b0b9d0ab1c2184"
   },
