--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "bringg-sdk",
   "version": "1.0.2",
   "dependencies": {
-    "socket.io-client": "git@github.com:liorsion/socket.io-client.git#0cd60822b6aed9fc4538009b52b0b9d0ab1c2184"
+    "socket.io-client": "https://github.com/liorsion/socket.io-client.git#0cd60822b6aed9fc4538009b52b0b9d0ab1c2184"
   },
   "devDependencies": {
     "faker.js": "git@github.com:Marak/faker.js.git#v3.0.1"
