--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "customer-sdk",
   "version": "0.0.1",
+  "scripts": {
+    "test": "karma start"
+  },
   "devDependencies": {
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.22",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.3.7",
-    "karma-notify-reporter": "^0.1.1",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "phantomjs": "^1.9.18",
-    "phantomjs-prebuilt": "^2.1.5"
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-notify-reporter": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
