--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "customer-sdk",
   "version": "0.0.1",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "codecov": "codecov"
   },
   "devDependencies": {
+    "codecov": "^2.2.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
