--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   ],
   "dependencies": {
     "socket.io-client": "https://github.com/liorsion/socket.io-client.git#0cd60822b6aed9fc4538009b52b0b9d0ab1c2184",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "faker.js": "git@github.com:Marak/faker.js.git#v3.0.1"
