--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,3 +1,4 @@
 FROM node:slim
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends bzip2 git libfontconfig
+    && apt-get install -y --no-install-recommends bzip2 git libfontconfig \
+    && npm install -g bower grunt-cli
