--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,6 +1,4 @@
-FROM node:10-slim
+FROM node:slim
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends build-essential bzip2 git libfontconfig1 python ruby-compass sudo \
-    && rm -rf /var/lib/apt/lists/* \
-    && echo "ALL ALL=NOPASSWD: ALL" > /etc/sudoers.d/all \
-    && npm config set package-lock false --global
+    && apt-get install -y --no-install-recommends bzip2 git libfontconfig \
+    && npm install -g bower grunt-cli
