--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "BringgSDK.js",
   "scripts": {
     "test": "karma start",
-    "build": "rm -rf dist && mkdir -p dist/bower_components && cp {package.json,LICENSE,BringgSDK.js} dist/ && cp -r bower_components/socket.io-client dist/bower_components/socket.io-client",
+    "build": "rm -rf dist && mkdir -p dist/bower_components && cp package.json dist/ && cp LICENSE dist/ && cp BringgSDK.js dist/ && cp -r bower_components/socket.io-client dist/bower_components/socket.io-client",
     "codecov": "codecov"
   },
   "devDependencies": {
