--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,4 +1,5 @@
-FROM node:slim
+FROM bringg/node:16-slim
+
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends bzip2 git libfontconfig \
-    && npm install -g bower grunt-cli
+    && apt-get install -y --no-install-recommends bzip2 git libfontconfig ca-certificates \
+    && npm install -g bower
