--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "customer-sdk",
   "version": "1.2.0",
   "scripts": {
-    "test": "karma start",
-    "codecov": "codecov"
+    "test": "karma start"
   },
   "devDependencies": {
-    "codecov": "^3.8.3",
     "jasmine-core": "^4.0.1",
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.1.1",
